[tool.poetry]
name = "dms"
version = "0.1.0"
description = "ingestão de dados ns S3"
authors = ["Edspx <52833958+Edspx@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.2"
Faker = "^9.9.0"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
